# hgaprec

./: .gitignore  AUTHORS  Makefile.in  README  README.md  TODO.txt  configure  configure.ac
KDD-paper/: Makefile  appendix-lda.tex  appendix.tex  bib.bib  bpf-kdd.tex  discussion.tex  eval.tex  inference.tex  intro.tex  model.tex  new-intro.tex  preamble.tex  related.tex  sig-alternate.tex  todo.txt
recsys-paper/: Makefile  bib.bib  eval.tex  inference.tex  intro.tex  model.tex  notes.txt  sig-alternate-v1.1  todo.txt
scripts/: run.pl  scratch.pl  smallrun.pl  x.sh
src/: Makefile.am  Makefile.in  burstygap.cc  burstygap.hh  collabtm.cc  env.hh  gaprec.cc  gaprec.hh  gpbase.hh  hgaprec  hgaprec.cc  hgaprec.hh  lda.cc  lda.hh  main.cc  matrix.hh  nmf.hh  normbase.hh  normprec.cc  normprec.hh  ratings.cc  ratings.hh  scratch.cc  utils.hh
src/nmflib/include/: blaslapack.h  calculatemaxchange.h  calculatemaxchange_singleprec.h  calculatenorm.h  calculatenorm_singleprec.h  calculatesvd.h  checkarguments.h  checkmatrices.h  common.h  cpmidx_double.h  generatematrix.h  loadmatrix.h  nmf_als.h  nmf_alspg.h  nmf_mu.h  nmf_mu_singleprec.h  nmf_neals.h  nmf_pg.h  nmfdriver.h  outputtiming.h  pg_subprob_h.h  pg_subprob_w.h  randnumber.h  setdefaultopts.h  storematrix.h
uai-2015/: Makefile  appendix.tex  bib.bib  discussion.tex  eval.tex  inference.tex  intro.tex  model.tex  preamble.tex  proceed.sty  related.tex  sample.tex  sample2e.tex  uai.tex  uai2e.tex
www-paper/: Makefile  appendix.tex  bpf-recsys.tex  bpf-www.tex  discussion.tex  eval.tex  inference.tex  intro.tex  (+4 more)
(+31 files in other folders)
